Recipe items on the homepage now laid out side by side. Side effect is that they look squished on mobile and narrow devices. Need to fix in future.

--- a/css/style.css
+++ b/css/style.css
@@ -59,3 +59,13 @@ a#button:hover {
     color: #FE735E;
     border: 2px solid #FE735E;
 }
+
+.recipe-container {
+    font-size: 0px;
+}
+
+.recipe-item {
+    width: 25%;
+    display: inline-block;
+    font-size: 1.2rem;
+}
